--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/body-parser": "0.0.34",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.0.35",
+    "@types/jsonwebtoken": "^7.2.3",
     "@types/multer": "0.0.33",
     "@types/node": "^7.0.5",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
+    "jsonwebtoken": "^8.0.1",
     "multer": "^1.3.0",
     "ts-sqlite3": "^0.1.0"
   },
