--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ts-sqlite3": "^0.1.0"
   },
   "devDependencies": {
+    "sqlite3": "^3.1.13",
     "tslint": "^4.4.2",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
