--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"noImplicitAny": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"target": "es2017"
 	},
 	"include": [
 		"**/*"
