--- a/Server/package.json
+++ b/Server/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "usermanager",
+  "name": "ToDoListServer",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "grunt build",
+    "validate": "grunt validate"
   },
   "author": "Relz <relz0071@gmail.com> (https://github.com/Relz)",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {    
     "@types/body-parser": "0.0.34",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.0.35",
@@ -18,14 +21,18 @@
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "multer": "^1.3.0",
-    "ts-sqlite3": "^0.1.0"
-  },
-  "devDependencies": {
+    "ts-sqlite3": "^0.1.0",
+    "cspell": "^1.5.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-shell": "^2.1.0",
+    "grunt-ts": "^5.5.1",
+    "grunt-tslint": "^5.0.1",
+    "typescript": "^2.2.2",
     "sqlite3": "^3.1.13",
-    "tslint": "^4.4.2",
+    "tslint": "^5.1.0",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.2.1",
     "vrsource-tslint-rules": "^5.1.1"
   }
 }
