--- a/Server/package.json
+++ b/Server/package.json
@@ -1,35 +1,37 @@
 {
   "name": "ToDoListServer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project for study",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/Relz/ToDoList.git"
+  },
   "main": "server.js",
   "scripts": {
     "start": "grunt build",
     "validate": "grunt validate"
   },
-  "author": "Relz <relz0071@gmail.com> (https://github.com/Relz)",
+  "author": "Relz and Co. <relz0071@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.1",
+    "cors": "^2.8.1",
+    "express": "^4.14.1",
+    "sqlite3": "^3.1.13"
   },
   "devDependencies": {    
     "@types/body-parser": "0.0.34",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.0.35",
-    "@types/multer": "0.0.33",
     "@types/node": "^7.0.5",
-    "body-parser": "^1.16.1",
-    "cors": "^2.8.1",
-    "express": "^4.14.1",
-    "multer": "^1.3.0",
-    "ts-sqlite3": "^0.1.0",
-    "cspell": "^1.5.0",
+    "cspell": "^1.10.4",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-shell": "^2.1.0",
     "grunt-ts": "^5.5.1",
     "grunt-tslint": "^5.0.1",
     "typescript": "^2.2.2",
-    "sqlite3": "^3.1.13",
+    "ts-sqlite3": "^0.1.0",
     "tslint": "^5.1.0",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
