--- a/Server/package.json
+++ b/Server/package.json
@@ -8,8 +8,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "grunt build",
-    "validate": "grunt validate"
+    "start": "node node_modules\\grunt\\bin\\grunt -gruntfile=gruntfile.js build",
+    "validate": "node node_modules\\grunt\\bin\\grunt -gruntfile=gruntfile.js validate"
   },
   "author": "Relz and Co. <relz0071@gmail.com>",
   "license": "ISC",
@@ -17,9 +17,10 @@
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "ts-sqlite3": "^0.1.0"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "@types/body-parser": "0.0.34",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.0.35",
@@ -31,7 +32,6 @@
     "grunt-ts": "^5.5.1",
     "grunt-tslint": "^5.0.1",
     "typescript": "^2.2.2",
-    "ts-sqlite3": "^0.1.0",
     "tslint": "^5.1.0",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
