--- a/Server/package.json
+++ b/Server/package.json
@@ -24,16 +24,17 @@
     "@types/cors": "^2.8.0",
     "@types/express": "^4.0.35",
     "@types/node": "^7.0.5",
+    "@types/sqlite3": "^3.1.1",
     "cspell": "^1.10.4",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-shell": "^2.1.0",
     "grunt-ts": "^5.5.1",
     "grunt-tslint": "^5.0.1",
-    "typescript": "^2.2.2",
     "tslint": "^5.1.0",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.2.2",
     "vrsource-tslint-rules": "^5.1.1"
   }
 }
