--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
 		"body-parser": "^1.16.1",
 		"cors": "^2.8.1",
 		"express": "^4.14.1",
+		"jsonwebtoken": "^8.1.0",
 		"sqlite3": "^3.1.13"
 	},
 	"devDependencies": {
