--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,10 +1,14 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
+		"moduleResolution": "node",
 		"noImplicitAny": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
 		"sourceMap": true,
+		"noEmitOnError": true,
+		"strictNullChecks": true,
+		"skipLibCheck": true,
 		"target": "es2017"
 	},
 	"include": [
