Реализовать аутентификацию пользователя по логину и паролю (#12)
* Реализовать аутентификацию пользователя по логину и паролю
метод: POST
ссылка: /users/authenticate
входные параметры: логин и md5 хэш пароля
возвращает: токен

--- a/Server/cspell.config.json
+++ b/Server/cspell.config.json
@@ -3,6 +3,10 @@
 	"language": "en",
 	"words": [
 		// Database words
-		"VARCHAR"
+		"VARCHAR",
+		// Secret
+		"ilovescotchyscotch",
+		// Modules constants
+		"READWRITE"
 	]
 }
