--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 **/build/
 *.log
 **/.baseDir.ts
-*.db
 
 # Build cache
 **/.tscache/
@@ -15,3 +14,6 @@
 
 # Coverage results
 **/coverage/
+
+#DataBase
+*.db
