--- a/Server/package.json
+++ b/Server/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "jsonwebtoken": "^8.1.0",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "http-status-codes": "^1.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.5",
@@ -33,6 +34,7 @@
     "@types/node": "^8.0.34",
     "@types/jsonwebtoken": "^7.2.3",
     "@types/sqlite3": "^3.1.1",
+    "@types/http-status-codes": "1.0.29",
     "chai": "^4.1.2",
     "cspell": "^1.10.4",
     "grunt": "^1.0.1",
