--- a/Server/package.json
+++ b/Server/package.json
@@ -17,12 +17,12 @@
   "author": "Relz and Co. <relz0071@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^7.2.3",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "jsonwebtoken": "^8.1.0",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "http-status-codes": "^1.3.0"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.5",
@@ -32,7 +32,9 @@
     "@types/express": "^4.0.35",
     "@types/mocha": "^2.2.33",
     "@types/node": "^8.0.34",
+    "@types/jsonwebtoken": "^7.2.3",
     "@types/sqlite3": "^3.1.1",
+    "@types/http-status-codes": "1.0.29",
     "chai": "^4.1.2",
     "cspell": "^1.10.4",
     "grunt": "^1.0.1",
@@ -45,7 +47,6 @@
     "istanbul": "^0.4.5",
     "mocha": "^4.0.1",
     "remap-istanbul": "^0.9.5",
-    "ts-node": "^3.3.0",
     "tslint": "^5.1.0",
     "tslint-consistent-codestyle": "^1.7.0",
     "tslint-eslint-rules": "^4.1.1",
