--- a/Client/cspell.config.json
+++ b/Client/cspell.config.json
@@ -5,7 +5,26 @@
 	"import": ["./node_modules/cspell-dict-russian/cspell-ext.json"],
 	"words": [
 		"keyframes",
-		"страницу"
+		"nowrap",
+		"emsp",
+		"страницу",
+		"базовая",
+		"Средняя",
+		"дефолтная",
+		"успеха",
+		"информационная",
+		"требующая",
+		"внимания",
+		"ссылочная",
+		"основная",
+		"использовании",
+		"разработчика",
+		"потребуется",
+		"классы",
+		"помощью",
+		"типов",
+		"кнопки",
+		"Демонстрация"
 	],
 	"ignorePaths": [
 		"src/img/*"
