--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
     "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-shell": "^2.1.0",
     "grunt-tslint": "^5.0.1",
     "node-sass": "^4.5.3",
