--- a/Client/package.json
+++ b/Client/package.json
@@ -19,7 +19,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "typescript-collections": "^1.2.5"
   },
   "devDependencies": {
     "@types/react": "^16.0.18",
