--- a/Client/package.json
+++ b/Client/package.json
@@ -29,6 +29,7 @@
     "awesome-typescript-loader": "^3.2.3",
     "cspell": "^1.10.6",
     "cspell-dict-russian": "^1.1.3",
+    "cspell-dict-ru_ru": "^1.1.3",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
