--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,19 @@
 # Build cache
 **/.tscache/
 
-# PhpStorm project specific settings
-**/.idea/
+# PhpStorm user-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+
+# PhpStorm sensitive or high-churn files:
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.xml
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
 
 # Coverage results
 **/coverage/
