--- a/Client/package.json
+++ b/Client/package.json
@@ -14,14 +14,19 @@
   "author": "Relz and Co. <relz0071@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/classnames": "^2.2.3",
     "classnames": "^2.2.5",
+    "moment": "^2.19.3",
+    "query-string": "^5.0.1",
     "react": "^16.1.1",
+    "react-datepicker": "0.61.0",
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/moment": "^2.13.0",
+    "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-router": "^4.0.18",
