--- a/Server/package.json
+++ b/Server/package.json
@@ -22,7 +22,8 @@
     "express": "^4.14.1",
     "jsonwebtoken": "^8.1.0",
     "sqlite3": "^3.1.13",
-    "http-status-codes": "^1.3.0"
+    "http-status-codes": "^1.3.0",
+    "chai-http": "^3.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "1.16.5",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^7.2.3",
     "@types/sqlite3": "^3.1.1",
     "@types/http-status-codes": "1.0.29",
+    "@types/chai-http": "^3.0.3",
     "chai": "^4.1.2",
     "cspell": "^1.10.4",
     "grunt": "^1.0.1",
